2009-11-20  Ken Brown  <kbrown@cornell.edu>  (tiny change)

	* net/browse-url.el (browse-url-default-windows-browser): Use
	cygstart for cygwin.

2009-11-20  Karl Fogel  <karl.fogel@red-bean.com>

	* bookmark.el Formatting and doc fixes only:
	(bookmark-search-delay): Shorten doc string to fit in 80 columns.
	(bookmark-bmenu-search): Wrap to fit within 80 columns.
	  Minor grammar and punctuation fixes in doc string.
	(bookmark-read-search-input): Adjust to fit within 80 columns.

2009-11-20  Tassilo Horn  <tassilo@member.fsf.org>

	* progmodes/cc-cmds.el (c-forward-into-nomenclature)
	(c-backward-into-nomenclature): Adapt to subword renaming.

	* subword.el (subword-forward, subword-backward, subword-mark)
	(subword-kill, subword-backward-kill, subword-transpose)
	(subword-downcase, subword-upcase, subword-capitalize)
	(subword-forward-internal, subword-backward-internal): Renamed
	from forward-subword, backward-subword, mark-subword kill-subword,
	backward-kill-subword, transpose-subwords, downcase-subword,
	upcase-subword, capitalize-subword forward-subword-internal,
	backward-subword-internal.

2009-11-20  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	* bookmark.el (bookmark-search-delay, bookmark-search-prompt): New
	options.
	(bookmark-search-pattern, bookmark-search-timer, bookmark-quit-flag):
	New vars.
	(bookmark-read-search-input, bookmark-filtered-alist-by-regexp-only)
	(bookmark-bmenu-filter-alist-by-regexp)
	(bookmark-bmenu-goto-bookmark, bookmark-bmenu-cancel-search): New funs.
	(bookmark-bmenu-search): New command.
	(bookmark-bmenu-mode-map): Bind it.

2009-11-20  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/semantic/complete.el (semantic-complete-inline-map): Doc fix.

	* cedet/semantic/idle.el (define-semantic-idle-service)
	(semantic-idle-summary-mode, semantic-idle-completions): Doc fix.

2009-11-20  Tassilo Horn  <tassilo@member.fsf.org>

	* progmodes/cc-cmds.el: declare-functioned forward-subword and